# satellite_image

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  picturelabel.cpp  picturelabel.h
linux_build/: CMakeCache.txt  Makefile  cmake_install.cmake  satellite_picture
linux_build/.qt/: QtDeploySupport.cmake
linux_build/satellite_picture_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
linux_build/satellite_picture_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_picturelabel.cpp  moc_picturelabel.cpp.d
linux_build/satellite_picture_autogen/include/: ui_mainwindow.h
